Adds nuvo_serial integration

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -339,6 +339,7 @@ homeassistant/components/nuki/* @pschmitt @pvizeli @pree
 homeassistant/components/numato/* @clssn
 homeassistant/components/number/* @home-assistant/core @Shulyaka
 homeassistant/components/nut/* @bdraco
+homeassistant/components/nuvo_serial/* @sprocket-9
 homeassistant/components/nws/* @MatthewFlamm
 homeassistant/components/nzbget/* @chriscla
 homeassistant/components/obihai/* @dshokouhi
