--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1038,6 +1038,9 @@ numato-gpio==0.10.0
 # homeassistant.components.trend
 numpy==1.20.3
 
+# homeassistant.components.nuvo_serial
+nuvo-serial==0.2
+
 # homeassistant.components.oasa_telematics
 oasatelematics==0.3
 
