--- a/homeassistant/components/nuvo_serial/services.yaml
+++ b/homeassistant/components/nuvo_serial/services.yaml
@@ -1,3 +1,9 @@
+page_on:
+  name: Page On
+  description: Activate Paging feature for all zones.
+page_off:
+  name: Page Off
+  description: Deactivate Paging feature, restoring all zone to pre-page state.
 snapshot:
   description: Take a snapshot of the media player zone.
   fields:
