--- a/homeassistant/components/nuvo_serial/manifest.json
+++ b/homeassistant/components/nuvo_serial/manifest.json
@@ -4,5 +4,6 @@
   "documentation": "https://www.home-assistant.io/integrations/nuvo_serial",
   "requirements": ["nuvo-serial==0.1.2"],
   "codeowners": ["@sprocket-9"],
-  "config_flow": true
+  "config_flow": true,
+  "iot_class": "local_push"
 }
