--- a/homeassistant/components/nuvo_serial/manifest.json
+++ b/homeassistant/components/nuvo_serial/manifest.json
@@ -5,5 +5,6 @@
   "requirements": ["nuvo-serial==0.1.2"],
   "codeowners": ["@sprocket-9"],
   "config_flow": true,
+  "quality_scale": "platinum",
   "iot_class": "local_push"
 }
